[package]
name = "life"
version = "0.1.0"
authors = ["Tom Simmons (Tomboyo) <tomasimmons@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "=0.7.3"
num-traits = "=0.2.11"

[dependencies.sdl2]
version = "=0.33"
features = ["bundled"]
